// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SourceCard > matches snapshot for a preset (stripe) source 1`] = `
"<div class="card card-pad">
  <div class="row between">
    <div class="row gap-3"><span style="width: 40px; height: 40px; border-radius: 9px; background: var(--accent-tint); color: var(--accent-700); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 17px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">S</span>
      <div class="col" style="gap: 3px;"><span class="row gap-2" style="align-items: center;"><span style="font-weight: 600; font-size: 15px;">Stripe</span><span class="chip" style="font-size: 10px; padding: 1px 6px;"> via webhook</span></span><span class="mono faint" style="font-size: 11.5px;"></span></div>
    </div>
    <div class="row gap-2" style="align-items: center;"><span class="badge warn"><i class="dot"></i>idle</span>
      <!--v-if--><button class="icon-btn" title="Remove source" style="color: var(--ink-3);"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <polyline points="3 6 5 6 21 6"></polyline>
          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
        </svg></button>
    </div>
  </div>
  <div class="code" style="margin-top: 16px;">
    <div class="code-head"><span class="lang">ingest url</span><button class="icon-btn mono" style="font-size: 11px; gap: 5px; display: inline-flex; align-items: center; color: var(--ink-3);"><svg class="ico" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <rect x="9" y="9" width="13" height="13" rx="2"></rect>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg> copy</button></div>
    <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;">https://ingest.markpost.io/v1/hooks/<span style="color: var(--accent-700);">wh_stripe01</span></div>
  </div>
  <!--v-if-->
  <div class="row wrap mono gap-6" style="font-size: 11.5px; color: var(--ink-3); margin-top: 14px;"><span>42 records</span><span>never hit</span><span>routes to 99-incoming/</span></div>
</div>"
`;

exports[`SourceCard > matches snapshot for a webhook source 1`] = `
"<div class="card card-pad">
  <div class="row between">
    <div class="row gap-3"><span style="width: 40px; height: 40px; border-radius: 9px; background: var(--accent-tint); color: var(--accent-700); display: grid; place-items: center; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"><svg class="ico" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg></span>
      <div class="col" style="gap: 3px;"><span class="row gap-2" style="align-items: center;"><span style="font-weight: 600; font-size: 15px;">Webhook endpoint</span>
        <!--v-if--></span><span class="mono faint" style="font-size: 11.5px;">POST · any JSON payload</span>
      </div>
    </div>
    <div class="row gap-2" style="align-items: center;"><span class="badge warn"><i class="dot"></i>idle</span>
      <!--v-if--><button class="icon-btn" title="Remove source" style="color: var(--ink-3);"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <polyline points="3 6 5 6 21 6"></polyline>
          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
        </svg></button>
    </div>
  </div>
  <div class="code" style="margin-top: 16px;">
    <div class="code-head"><span class="lang">ingest url</span><button class="icon-btn mono" style="font-size: 11px; gap: 5px; display: inline-flex; align-items: center; color: var(--ink-3);"><svg class="ico" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <rect x="9" y="9" width="13" height="13" rx="2"></rect>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg> copy</button></div>
    <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;">https://ingest.markpost.io/v1/hooks/<span style="color: var(--accent-700);">wh_abc12345</span></div>
  </div>
  <!--v-if-->
  <div class="row wrap mono gap-6" style="font-size: 11.5px; color: var(--ink-3); margin-top: 14px;"><span>42 records</span><span>never hit</span><span>routes to 99-incoming/</span></div>
</div>"
`;

exports[`SourceCard > matches snapshot for an email source 1`] = `
"<div class="card card-pad">
  <div class="row between">
    <div class="row gap-3"><span style="width: 40px; height: 40px; border-radius: 9px; background: var(--accent-tint); color: var(--accent-700); display: grid; place-items: center; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"><svg class="ico" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg></span>
      <div class="col" style="gap: 3px;"><span class="row gap-2" style="align-items: center;"><span style="font-weight: 600; font-size: 15px;">Email-in address</span>
        <!--v-if--></span><span class="mono faint" style="font-size: 11.5px;">forward or send anything</span>
      </div>
    </div>
    <div class="row gap-2" style="align-items: center;"><span class="badge warn"><i class="dot"></i>idle</span>
      <!--v-if--><button class="icon-btn" title="Remove source" style="color: var(--ink-3);"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <polyline points="3 6 5 6 21 6"></polyline>
          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
        </svg></button>
    </div>
  </div>
  <div class="code" style="margin-top: 16px;">
    <div class="code-head"><span class="lang">address</span><button class="icon-btn mono" style="font-size: 11px; gap: 5px; display: inline-flex; align-items: center; color: var(--ink-3);"><svg class="ico" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <rect x="9" y="9" width="13" height="13" rx="2"></rect>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg> copy</button></div>
    <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;"><span style="color: var(--accent-700);">clip-ab12</span>@in.markpost.io</div>
  </div>
  <!--v-if-->
  <div class="row wrap mono gap-6" style="font-size: 11.5px; color: var(--ink-3); margin-top: 14px;"><span>42 records</span><span>never hit</span><span>routes to 99-incoming/</span></div>
</div>"
`;
